public static class GAME
{
    public static string Player = "Player";
    public static string Monster = "Monster";


    public static string idle = "idle";
    public static string run = "run";
    public static string walk = "walk";
    public static string attack = "attack";
    public static string hurt = "hurt";
    public static string died = "died";
    public static string attack_reverse = "Attack_reverse";

    public static string x = "Horizontal";
    public static string y = "Vertical";
    public static string Skill = "Skill";
    public static string Thunder = "Thunder";

}

