public static class TagManager
{
    public static string Player = "Player";
    public static string Monster = "Monster";
    public static string ilde = "idle";
    public static string run = "run";
    public static string walk = "walk";
    public static string attack = "attack";
    public static string hurt = "hurt";
    public static string died = "died";
}
